issue #124, issue #125, hyphenator and text-align: justify

--- a/www/src/DembeloMain/Resources/public/css/dembelo.scss
+++ b/www/src/DembeloMain/Resources/public/css/dembelo.scss
@@ -141,4 +141,5 @@ body {
 
 div.read {
   font-family: 'Linux Libertine';
+  text-align: justify;
 }
